Bug 350442 - toXMLString omits namespace definition for attribute added with a namespace with an undefined prefix.  r=brendan